Xtend 2.4 new TS